fix: video backdrop overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -681,6 +681,14 @@ video {
   height: 9rem;
 }
 
+.h-\[calc\(100vh-60px\)\] {
+  height: calc(100vh - 60px);
+}
+
+.h-full {
+  height: 100%;
+}
+
 .min-h-fit {
   min-height: -moz-fit-content;
   min-height: fit-content;
@@ -776,6 +784,10 @@ video {
 
 .overflow-scroll {
   overflow: scroll;
+}
+
+.overflow-y-clip {
+  overflow-y: clip;
 }
 
 .overflow-y-scroll {
